--- a/css/styles.css
+++ b/css/styles.css
@@ -854,3 +854,102 @@ footer {
        
       
   }
+  .form{
+    min-width: 448px;
+    min-height: 342px;
+    margin-right: 40px;
+    margin-left: 40px;
+    margin-top: 40px;
+  }
+  .form-header{
+    margin: 0px;
+    padding-bottom: 12px;
+    align-items: center;
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: #212121;
+  }
+  .form-input{
+    display:block;
+    width: 100%;
+    height: 40px;
+    padding: 0;
+    padding-left: 42px;
+    border: none;
+    outline: none;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+            border-radius: 4px;
+            transition: var(--transition);
+  }
+
+  .form-field{
+    position: relative;
+    margin-top: 4px;
+  
+  }
+   .form-input:focus{
+    outline: none;
+    border: 1px solid var(--color-accent);
+   }
+  .form-lable{
+    display: block;
+   padding-bottom: 10px;
+  }
+  .form-icon{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transition: var(--transition);
+    transform: translateY(-50%);
+  }
+        
+  .form-input:focus + .form-icon{
+    fill: var(--color-accent);
+  
+  }
+  .textarear{
+    width: 100%;
+    resize: none;
+    padding: 12px 16px;
+    margin-top: 4px;
+    outline: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        transition: var(--transition);
+  }
+  .textarear:focus{
+    border: 1px solid var(--color-accent)
+  }
+
+
+/* .checkbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding-top: 10px;
+  
+} */
+.icon-checkbox{
+    display: inline-block;
+    border: 2px solid var(--color-background);
+    border-radius: 4px;
+    width: 15px;
+    height: 15px;
+    background-color: var(--color-accent);
+
+}
+/* .checkbox:checked + .icon-checkbox{
+    border-color: var(--color-accent);
+    background-color: var(--color-accent);
+    background-image: url(../image/symbol-defs.svg#icon-check);
+    background-size: contain; */
+}
+.agree{
+    color: #2196F3;
+}
